v3/src/components/menu-bar/menu-bar.scss
.codap-menu-bar {
  position: relative;
  width: 100%;
  height: 30px;
  background: #105262;

  // CFM style overrides
  .view {
    .menu-bar {
      // center hamburger menu button
      .menu-anchor {
        margin-top: 5px;
      }
    }
    .modal-dialog {
      // default border for input elements
      input {
        border: revert;
        line-height: normal;
      }
      // TODO: this style override was added to v2 in https://github.com/concord-consortium/codap/pull/1075.
      // It should really be handled internally to the CFM itself.
      .tabbed-panel .workspace-tab-component .dialogTab .provider-message {
        color: #000;
        font-size: 12px
      }
    }
  }

}

